--- a/Chi/style/aboutus.css
+++ b/Chi/style/aboutus.css
@@ -1,17 +1,32 @@
+/* * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: sans-serif;
+} */
+/* FIX BUG :) */
+.intro p, .banner-staff p, .staff p{
+    margin: 1em 0;
+}
+h1, h2{
+    margin: 23px 0;
+}
+
+
 body{
     margin: 0;
     padding: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-family: sans-serif;
+    font-family: sans-serif; 
+    overflow-y: scroll;
+    scroll-behavior: smooth;
 }
 a{
     text-decoration: none;
 }
-.active ~ label {
-    display: block;
-}
+
 /* BANNER */
 .banner{
     background-image:
@@ -68,6 +83,9 @@ a{
     padding: 0 15px;
     line-height: 27px;
     font-size: 15px;
+    /* display: flex;
+    flex-direction: column;
+    justify-content: space-around; */
 }
 
 /* VIDEO */
@@ -126,12 +144,11 @@ a{
 }
 .staff{
     box-sizing: border-box;
-    width: 90%;
+    width: 80%;
     display: flex;
     justify-content: space-between;
-    position: absolute;
-    top: 82%;
-    left: 5%;
+    position: relative;
+    top: -100px;
 }
 .staff-info{
     width: 260px;
@@ -189,7 +206,6 @@ a{
 /* DESTINATIONS */
 .destinations{
     width: 80%;
-    margin-top: 470px;
     margin-bottom: 70px;
 }
 .des-header{
@@ -285,6 +301,7 @@ a{
     url(../images/aboutus-status.jpeg) no-repeat center/cover fixed;
     justify-content: space-evenly;
     align-items: center;
+    box-sizing: border-box;
 }
 .status-detail{
     text-align: center;
@@ -319,23 +336,26 @@ a{
         flex-direction: column;
         text-align: center;
     }
+    /* .intro-right-col{
+        height: 100px;
+    } */
     .video{
         width: 90%;
     }
     .banner-staff-text{
-        left: 27%;
-        width: 50%;
+        width: 60%;
+        left: 20%;
+        /* position: unset; */
     }
     .staff{
-        /* display: none; */
+        top: 0;
         flex-direction: column;
-        align-items: center;        
+        align-items: center;    
+        width: 65%;    
     }
     .staff-info{
         width: 90%;
-    }
-    .destinations{
-        margin-top: 2318px;
+        margin: 40px 0;
     }
     .des-container{
         display: flex;
@@ -346,7 +366,7 @@ a{
         width: 90%;
     }
     .status{
-        width: 60%;
+        width: 100%;
         display: flex;
         flex-direction: column;
         height: auto;
@@ -355,8 +375,15 @@ a{
 }
 
 @media only screen and (max-width: 500px){
+    .banner-staff-text{
+        width: 80%;
+        left: 10%;
+    }
     .des-header-2{
         font-size: 25px;
+    }
+    .des-container-col{
+        width: 120%;
     }
     .des-container-row-1{
         font-size: 15px;
