--- a/Chi/style/contact.css
+++ b/Chi/style/contact.css
@@ -1,3 +1,9 @@
+/* * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: sans-serif;
+} */
 body{
     margin: 0;
     padding: 0;
@@ -122,7 +128,7 @@ textarea{
 .detail-col-row-left, .detail-col-row-right{
     box-sizing: border-box;
     width: 50%;
-    padding: 15px 10px;
+    padding: 15px 0px;
     font-size: 14px;
 }
 .detail-col-row-left{
