--- a/Chi/style/news.css
+++ b/Chi/style/news.css
@@ -1,3 +1,9 @@
+/* * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: sans-serif;
+} */
 :root{
     --green: #1bbc9c;
     --purple: #ba71da;
@@ -13,10 +19,6 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-a {
-    text-decoration: none !important;
 }
 
 /* BANNER */
@@ -58,10 +60,11 @@ a {
 .container-section{
     box-sizing: border-box;
     width: 570px;
-    /* height: 325px; */
+    height: 325px;
     margin: 15px;
     display: flex;
     border: 1px solid #f1f1f1;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
 }
 .container-section-img, .container-section-text{
     width: 50%;
