--- a/Chi/style/news.css
+++ b/Chi/style/news.css
@@ -1,9 +1,9 @@
-/* * {
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: sans-serif;
-} */
+}
 :root{
     --green: #1bbc9c;
     --purple: #ba71da;
