--- a/Chi/style/aboutus.css
+++ b/Chi/style/aboutus.css
@@ -1,9 +1,9 @@
-/* * {
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: sans-serif;
-} */
+}
 /* FIX BUG :) */
 .intro p, .banner-staff p, .staff p{
     margin: 1em 0;
@@ -266,6 +266,7 @@ a{
     justify-content: space-between;
     font-family: 'Poppins', sans-serif;
     font-size: 17px;
+    font-weight: bold;
     line-height: 17px;
     color: #555555;
     margin-top: 30px;
