--- a/Chi/style/aboutus.css
+++ b/Chi/style/aboutus.css
@@ -11,6 +11,9 @@
 h1, h2{
     margin: 23px 0;
 }
+.header{
+    font-family: "Poppins", sans-serif;
+}
 
 
 body{
@@ -239,7 +242,7 @@ a{
     width: 100%;
     height: 5px;
     left: 0;
-    bottom: 11px;
+    bottom: 6px;
     z-index: -1;
 }
 .des-container{
