--- a/Thang/style/base.css
+++ b/Thang/style/base.css
@@ -61,6 +61,7 @@ a {
   padding: 0 15px;
   border-radius: 5px;
   line-height: 80px;
+  font-family: "Poppins", sans-serif;
 }
 .header_content .links li label {
   display: none;
