--- a/Thang/style/base.css
+++ b/Thang/style/base.css
@@ -139,7 +139,6 @@ a {
   top: 0;
   left: 105%;
 }
-
 .header_content .links ul li {
   position: relative;
 }
@@ -180,7 +179,6 @@ a {
 }
 .header_content .links li:hover .sub_nav {
   visibility: visible;
-  transition: all 0.1s ease-in-out;
 }
 .header_content .links .hover_sub2:hover .sub_subnav {
   visibility: visible;
@@ -327,6 +325,27 @@ a {
     width: 90%;
   }
 }
+@media (min-width: 940px) {
+  .header_content .links .sub_nav .sub_subnav {
+    transform: translateY(50px);
+    opacity: 0;
+  }
+  .header_content .links .sub_nav {
+    transform: translateY(50px);
+    opacity: 0;
+  }
+  .header_content .links li:hover .sub_nav {
+    transform: translateY(0);
+    opacity: 1;
+    transition: all 0.15s ease-in-out;
+  }
+  .header_content .links .hover_sub2:hover .sub_subnav {
+    transform: translateY(0);
+    opacity: 1;
+    transition: all 0.15s ease-in-out;
+  }
+}
+
 @media screen and (max-width: 940px) {
   .active1 {
     display: none !important;
